--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,43 @@
-requests==2.24.0
-imap_tools
+appdirs==1.4.4
+APScheduler==3.6.3
+async-timeout==4.0.2
+attrs==22.1.0
+beautifulsoup4==4.11.1
+bs4==0.0.1
+cachetools==4.2.2
+cattrs==22.2.0
+certifi==2022.9.24
+chardet==3.0.4
+click==8.1.3
+click-plugins==1.1.1
+colorama==0.4.6
+exceptiongroup==1.0.4
+Flask==2.2.2
+gunicorn==20.1.0
+idna==2.10
+imap-tools==1.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lxml==4.9.1
+MarkupSafe==2.1.1
+packaging==21.3
+prettytable==3.5.0
+pyparsing==3.0.9
 python-telegram==0.14.0
-python-telegram-bot
-shodan
-redis
-gunicorn
-flask
+python-telegram-bot==13.14
+pytz==2022.6
+pytz-deprecation-shim==0.1.0.post0
+redis==4.3.5
+requests==2.24.0
+requests-cache==0.9.7
+shodan==1.28.0
+six==1.16.0
+soupsieve==2.3.2.post1
+tornado==6.1
+tzdata==2022.6
+tzlocal==4.2
+url-normalize==1.4.3
+urllib3==1.25.11
+wcwidth==0.2.5
+Werkzeug==2.2.2
+XlsxWriter==3.0.3
